<resources>
    <string name="app_name">mobileproject</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google">Sign in with google</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="Back">Back</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_newbie">Welcome newbie!</string>
    <string name="let_s_help_you_create_your_account">Let\'s help you create your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_rgt">Sign up</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_one_time_password_via_your_email">We will send you an One Time Password via your Email</string>
    <string name="edt_username">Enter your username</string>
    <string name="get_otp">Search</string>
    <string name="verify">Verify</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="new_password">New password</string>
    <string name="confirm_password1">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="change_password1">Change password</string>
    <string name="make_you_a_brand_new_password">Make you a brand new password</string>


</resources>