<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="599dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="0dp"

        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/iconuit" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_edt"
            android:padding="10dp"
            android:ems="15"
            android:hint="@string/Username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_edt"
            android:padding="10dp"
            android:ems="15"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password"
            android:textColor="#55D5E7"
            android:textSize="17dp"
            android:id="@+id/txtview_forgot_password"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Login"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="85dp"
        android:layout_alignParentBottom="true"
        android:text="@string/don_t_have_an_account"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="265dp"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up_rgt"
        android:id="@+id/txtview_sign_up"
        android:textColor="#55D5E7"
        android:textSize="17dp"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_marginBottom="50dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="250dp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-23dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/pic1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="85dp"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="35dp" />

</RelativeLayout>